[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://Script/BackPack/equipment_fall.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(52, 52)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(53, 6)
script = null

[sub_resource type="Animation" id="3"]
length = 0.001
script = null

[sub_resource type="Animation" id="4"]
resource_name = "remove"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("item_pic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"Pick"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("item_pic:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -60)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/get_area:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="AnimationLibrary" id="5"]
_data = {
"RESET": SubResource( "3" ),
"remove": SubResource( "4" )
}
script = null

[node name="equipment_fall" type="CharacterBody2D"]
position = Vector2(466, 39)
collision_layer = 4
collision_mask = 33
script = ExtResource( "1" )

[node name="item_pic" type="Sprite2D" parent="."]
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
metadata/_edit_lock_ = true

[node name="get_area" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( "1" )
disabled = true
metadata/_edit_lock_ = true

[node name="pz" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 23)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="remove_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "5" )
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered" flags=18]
